--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 django = "*"
 mysqlclient = "*"
 djangorestframework = "*"
+mysql-connector-python = "*"
+pillow = "*"
 
 [dev-packages]
 
