Added a Number of Settings to Allow CORS to Function Properly + Added Axios Call to Retrieve Artwork

--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -9,6 +9,8 @@ mysqlclient = "*"
 djangorestframework = "*"
 mysql-connector-python = "*"
 pillow = "*"
+django-cors-headers = "*"
+tzdata = "*"
 
 [dev-packages]
 
